# nouninator

./: .gitignore  Cargo.toml  LICENSE  README.md  prd.md
examples/data/: adjectives.csv  nouns.csv  sentences.csv  synonyms.csv  verbs.csv  word_frequency.csv
src/: error.rs  lib.rs  main.rs
src/cli/: convert.rs  example.rs  init.rs  mod.rs  serve.rs
src/config/: mod.rs  types.rs
src/schema/: builder.rs  mod.rs  resolver.rs  scalars.rs  type_mapping.rs
src/unity/: client.rs  discovery.rs  mod.rs  types.rs
tests/: end_to_end_delta_test.rs  schema_generation_test.rs
